# Estimathon

./: .gitignore  95198181.json  95198181.xls  README.md  manual_basket.json  pyproject.toml  runner.py  runtime.md
basket/: basket.py
data/: basket_prices.csv  constituent_prices.csv
kalman/: kalman.py
utils/: exchange_hours.py  kalman_state_recorder.py  live_prices.py  load_manual_basket.py  load_xls_basket.py  manual_basket_loader.py  manual_price_ingester.py
